fix: Aligned message container in mobile layout.

--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -38,7 +38,7 @@ p {
   }
 
   .message-container {
-    margin-top: -40%;
+    margin-top: -28%;
   }
 
   .message-header {
